--- a/package.json
+++ b/package.json
@@ -10,22 +10,82 @@
     "build:mac": "node scripts/build.js && electron-builder --mac",
     "build:linux": "node scripts/build.js && electron-builder --linux"
   },
-  "repository": "https://github.com/deluze/electron-vue-template",
-  "author": {
-    "name": "Deluze",
-    "url": "https://github.com/Deluze"
+  "engines": {
+    "node": ">=18.12.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/cli": "^5.0.8",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.3",
-    "electron": "^22.0.2",
-    "electron-builder": "^23.6.0",
-    "typescript": "^4.8.4",
-    "vite": "^4.0.4"
+    "@intlify/vite-plugin-vue-i18n": "^5.0.0",
+    "@types/animejs": "^3.1.6",
+    "@types/cron": "^1.7.3",
+    "@types/crypto-js": "^4.1.1",
+    "@types/ffi-napi": "^4.0.5",
+    "@types/node": "^18.7.9",
+    "@types/ref-napi": "^3.0.6",
+    "@types/sortablejs": "^1.10.7",
+    "@types/source-map-support": "^0.5.4",
+    "@types/superagent": "^4.1.14",
+    "@types/unzipper": "^0.10.5",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vicons/ionicons5": "^0.12.0",
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "animejs": "^3.2.1",
+    "clipboard": "^2.0.11",
+    "color2k": "^2.0.0",
+    "date-fns": "^2.29.1",
+    "electron": "^20.0.3",
+    "electron-builder": "^23.5.0",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^8.9.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "exponential-backoff": "^3.1.0",
+    "less": "^4.1.2",
+    "lodash": "^4.17.21",
+    "naive-ui": "^2.30.0",
+    "pinia": "^2.0.12",
+    "source-map-support": "^0.5.21",
+    "tslib": "^2.4.1",
+    "typescript": "~4.4.4",
+    "vite": "^2.8.4",
+    "vite-plugin-resolve": "^1.4.4",
+    "vite-svg-loader": "^3.1.2",
+    "vue": "^3.2.31",
+    "vue-i18n": "^v9.2.0-beta.39",
+    "vue-router": "4",
+    "vue-tsc": "^0.31.4",
+    "vue3-json-viewer": "^2.2.2",
+    "vuedraggable": "^4.0.1"
   },
+  "env": {
+    "//": "Used in build scripts",
+    "PORT": 3344
+  },
+  "keywords": [
+    "vite",
+    "electron",
+    "vue3",
+    "rollup",
+    "arknights"
+  ],
   "dependencies": {
-    "vue": "^3.2.40"
+    "@tigerconnect/ffi-napi": "4.0.3-tc3",
+    "@tigerconnect/ref-napi": "4.0.0-tc8",
+    "@types/lodash": "^4.14.191",
+    "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "electron-acrylic-window": "^0.5.11",
+    "electron-store": "^8.0.1",
+    "electron-util": "^0.17.2",
+    "execa": "^5.1.1",
+    "iconv-lite": "^0.6.3",
+    "ps-list": "^7.2.0",
+    "systeminformation": "^5.12.4",
+    "tslog": "^3.3.3",
+    "unzipper": "^0.10.11"
   }
 }
