--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "vue-router": "4",
     "vue-tsc": "^0.31.4",
     "vue3-json-viewer": "^2.2.2",
-    "vuedraggable": "^4.0.1"
+    "vuedraggable": "^4.0.1",
+	
+	"chokidar": "^3.5.3"
   },
   "env": {
     "//": "Used in build scripts",
